--- a/nikkalogua/pubspec.yaml
+++ b/nikkalogua/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
     sdk: flutter
   sqflite: any
   path_provider: any
+  intl: any
 
 
   # The following adds the Cupertino Icons font to your application.
