--- a/nikkalogua/android/app/src/profile/AndroidManifest.xml
+++ b/nikkalogua/android/app/src/profile/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="net.8mamo10.nikkalogua">
+    package="net.h8mamo10.nikkalogua">
     <!-- Flutter needs it to communicate with the running application
          to allow setting breakpoints, to provide hot reload, etc.
     -->
